# notmin

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.git_disabled/: COMMIT_EDITMSG  config  index
.git_disabled/logs/: HEAD
.git_disabled/logs/refs/heads/: main
.git_disabled/logs/refs/remotes/origin/: main
.git_disabled/refs/heads/: main
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
