[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# 核心修改：去掉 "menu"，保留 "tray-icon"
tauri = { version = "2.2", features = ["tray-icon"] } 
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-notification = "2.0"
tauri-plugin-log = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
